# palettevec

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: test_coverage.yml
benches/: base_palette_vec.rs  benchmark.rs  experiments.rs
examples/lorem_ipsum/: lorem_ipsum.txt  main.rs
src/: fast_palette_array.rs  lib.rs  oldlib.rs
src/index_buffer/: aligned.rs  fast.rs  mod.rs
src/palette/: hybrid.rs  mod.rs  vec.rs
src/tests/: cases.rs  mod.rs
src/tests/implementations/: fast_palette_array.rs  mod.rs  specialized_array.rs
src/tests/index_buffer/: aligned.rs  fast.rs  mod.rs
src/tests/palette/: hybrid.rs  mod.rs  vec.rs
src/tests/palette_vec/: base.rs  fast.rs  mod.rs
