[package]
name = "palettevec"
version = "0.4.0"
edition = "2021"
authors = ["alexdesander <alexdesander@tuta.io>"]
description = "A palette compressed vector library for potentially insane runtime compression ratios."
keywords = ["gamedev", "encoding", "memory", "vector", "compression"]
categories = ["compression", "data-structures"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexdesander/palettevec"

[dependencies]
rustc-hash = "2.1"
bitcode = { version = "0.6" }
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"

[dev-dependencies]
rand = "0.9"
rand_chacha = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }
rand_xoshiro = "0.7"

[features]
unsafe_optimizations = []

[lib]
bench = false

[[bench]]
name = "base_palette_vec"
harness = false

[[bench]]
name = "experiments"
harness = false
