[package]
name = "palettevec"
version = "0.4.0"
edition = "2021"
authors = ["alexdesander <alexdesander@tuta.io>"]
description = "A palette compressed vector library for potentially insane runtime compression ratios."
keywords = ["gamedev", "encoding", "memory", "vector", "compression"]
categories = ["compression", "data-structures"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/alexdesander/palettevec"
include = ["src/**/*", "LICENSE-*", "README.md", "!**/tests/**/*"]


[dependencies]
rustc-hash = "2.1"
bitcode = { version = "0.6", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde-big-array = { version = "0.5", optional = true }

[dev-dependencies]
rand = "0.9"
rand_chacha = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }
rand_xoshiro = "0.7"

[features]
default = ["count-u32"]
unsafe-optimizations = []
serde = ["dep:serde", "dep:serde-big-array"]
bitcode = ["dep:bitcode"]
count-u16 = []
count-u32 = []
count-u64 = []
count-usize = []

[lib]
bench = false

[[bench]]
name = "base_palette_vec"
harness = false

[[bench]]
name = "experiments"
harness = false
